--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <title>Calcolatore Scrabble</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <link href="https://raw.githubusercontent.com/shhdharmen/keyboard-css/main/dist/css/main.min.css" rel="stylesheet" crossorigin="anonymous">
+  <link href="css/bootstrap.min.css" rel="stylesheet">
+  <link href="css/main.min.css" rel="stylesheet">
   <style>
 	.sub{
 	  vertical-align: sub;
@@ -19,6 +19,9 @@
 	}
 	.fs-7 {
 	  font-size: 0.8rem !important;
+	}
+	.letter-mult {
+	  margin-left: 6px;
 	}
 </style>
 </head>
@@ -72,14 +75,6 @@
 		<div class="col">
 			<button type="button" id="letter12" class="square-btn kbc-button btn-light word-letter"></button>
 		</div>
-		<!--
-		<div class="col">
-			<button type="button" id="letter13" class="square-btn kbc-button btn-light word-letter"></button>
-		</div>
-		<div class="col">
-			<button type="button" id="letter14" class="square-btn kbc-button btn-light word-letter"></button>
-		</div>
-		-->
 	  </div>
 	  <div class="row">
 		<div class="col">
@@ -190,26 +185,6 @@
 			  <button type="button" id="toggler12" class="square-btn btn btn-secondary letter-mult">1x</button>
 			</div>
 		</div>
-		<!--
-		<div class="col">
-			<div class="btn-group-toggle" data-toggle="buttons">
-			  <input type="radio" name="mult13" value="1" checked hidden>
-			  <input type="radio" name="mult13" value="2" hidden>
-			  <input type="radio" name="mult13" value="3" hidden>
-			  <input type="radio" name="mult13" value="0" hidden>
-			  <button type="button" id="toggler13" class="square-btn btn btn-secondary letter-mult">1x</button>
-			</div>
-		</div>
-		<div class="col">
-			<div class="btn-group-toggle" data-toggle="buttons">
-			  <input type="radio" name="mult14" value="1" checked hidden>
-			  <input type="radio" name="mult14" value="2" hidden>
-			  <input type="radio" name="mult14" value="3" hidden>
-			  <input type="radio" name="mult14" value="0" hidden>
-			  <button type="button" id="toggler14" class="square-btn btn btn-secondary letter-mult">1x</button>
-			</div>
-		</div>
-		-->
 	  </div>
 	  <div class="row">
 		<div class="col-1">
@@ -233,8 +208,8 @@
 	  </div>
 	</div>
 	
-	<script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"></script>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+	<script src="js/jquery-3.6.0.slim.min.js"></script>
+	<script src="js/bootstrap.bundle.min.js"></script>
 	<script>
 		var dict = {
 			"A": 1,
@@ -307,7 +282,7 @@
 			  var chars = $(this).val().split("");
 			  $('.word-letter').each(function(index, value) {
 			      if (index < chars.length) {
-					$(this).html('<span class="sub fs-3">' + chars[index].toUpperCase() + '</span> <span class="sub fs-7">' + dict[chars[index].toUpperCase()] + '</span>');
+					$(this).html('<span class="sub fs-3">' + chars[index].toUpperCase() + '</span><span class="sub fs-7">' + dict[chars[index].toUpperCase()] + '</span>');
 				  } else {
 					$(this).html('');
 				  }
