--- a/index.html
+++ b/index.html
@@ -5,37 +5,16 @@
   <title>Calcolatore Scrabble</title>
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/main.min.css" rel="stylesheet">
-  <style>
-	.sub{
-	  vertical-align: sub;
-	  font-size: medium;
-	}
-	.square-btn {
-	  height: 55px;
-	  width: 55px;
-	}
-	.row {
-	  padding-top: 20px;
-	}
-	.fs-7 {
-	  font-size: 0.8rem !important;
-	}
-	.letter-multipliers button {
-	  margin-left: 6px;
-	}
-</style>
+  <link href="css/scrabble.css" rel="stylesheet">
 </head>
 <body>
 	<div class="container-lg">
 	  <div class="row g-0">
-		  <div class="col-1">
-			<label for="word" class="col-form-label">Parola:</label>
-		  </div>
 		  <div class="col-6">
-			<input type="text" class="form-control" id="word" maxlength=14" placeholder="Inserisci qui la parola per calcolare il punteggio">
+			<input type="text" class="form-control ms-1" id="word" maxlength=14" placeholder="Inserisci qui la parola per calcolare il punteggio">
 		  </div>
 		  <div class="col">
-			<button type="button" id="reset" class="btn btn-secondary">Reset</button>
+			<button type="button" id="reset" class="btn btn-secondary ms-3">Reset</button>
 		</div>
 	  </div>
 	  <div class="row gx-0">
@@ -76,9 +55,9 @@
 			<button type="button" id="letter12" class="square-btn kbc-button btn-light word-letter"></button>
 		</div>
 	  </div>
-	  <div class="row gx-0 letter-multipliers">
+	  <div class="row gx-0">
 		<div class="col">
-			<div class="btn-group-toggle" data-toggle="buttons">
+			<div class="btn-group-toggle ms-1" data-toggle="buttons">
 			  <input type="radio" name="mult1" value="1" checked hidden>
 			  <input type="radio" name="mult1" value="2" hidden>
 			  <input type="radio" name="mult1" value="3" hidden>
@@ -87,7 +66,7 @@
 			</div>
 		</div>
 		<div class="col">
-			<div class="btn-group-toggle" data-toggle="buttons">
+			<div class="btn-group-toggle ms-1" data-toggle="buttons">
 			  <input type="radio" name="mult2" value="1" checked hidden>
 			  <input type="radio" name="mult2" value="2" hidden>
 			  <input type="radio" name="mult2" value="3" hidden>
@@ -96,7 +75,7 @@
 			</div>
 		</div>
 		<div class="col">
-			<div class="btn-group-toggle" data-toggle="buttons">
+			<div class="btn-group-toggle ms-1" data-toggle="buttons">
 			  <input type="radio" name="mult3" value="1" checked hidden>
 			  <input type="radio" name="mult3" value="2" hidden>
 			  <input type="radio" name="mult3" value="3" hidden>
@@ -105,7 +84,7 @@
 			</div>
 		</div>
 		<div class="col">
-			<div class="btn-group-toggle" data-toggle="buttons">
+			<div class="btn-group-toggle ms-1" data-toggle="buttons">
 			  <input type="radio" name="mult4" value="1" checked hidden>
 			  <input type="radio" name="mult4" value="2" hidden>
 			  <input type="radio" name="mult4" value="3" hidden>
@@ -114,7 +93,7 @@
 			</div>
 		</div>
 		<div class="col">
-			<div class="btn-group-toggle" data-toggle="buttons">
+			<div class="btn-group-toggle ms-1" data-toggle="buttons">
 			  <input type="radio" name="mult5" value="1" checked hidden>
 			  <input type="radio" name="mult5" value="2" hidden>
 			  <input type="radio" name="mult5" value="3" hidden>
@@ -123,7 +102,7 @@
 			</div>
 		</div>
 		<div class="col">
-			<div class="btn-group-toggle" data-toggle="buttons">
+			<div class="btn-group-toggle ms-1" data-toggle="buttons">
 			  <input type="radio" name="mult6" value="1" checked hidden>
 			  <input type="radio" name="mult6" value="2" hidden>
 			  <input type="radio" name="mult6" value="3" hidden>
@@ -132,7 +111,7 @@
 			</div>
 		</div>
 		<div class="col">
-			<div class="btn-group-toggle" data-toggle="buttons">
+			<div class="btn-group-toggle ms-1" data-toggle="buttons">
 			  <input type="radio" name="mult7" value="1" checked hidden>
 			  <input type="radio" name="mult7" value="2" hidden>
 			  <input type="radio" name="mult7" value="3" hidden>
@@ -141,7 +120,7 @@
 			</div>
 		</div>
 		<div class="col">
-			<div class="btn-group-toggle" data-toggle="buttons">
+			<div class="btn-group-toggle ms-1" data-toggle="buttons">
 			  <input type="radio" name="mult8" value="1" checked hidden>
 			  <input type="radio" name="mult8" value="2" hidden>
 			  <input type="radio" name="mult8" value="3" hidden>
@@ -150,7 +129,7 @@
 			</div>
 		</div>
 		<div class="col">
-			<div class="btn-group-toggle" data-toggle="buttons">
+			<div class="btn-group-toggle ms-1" data-toggle="buttons">
 			  <input type="radio" name="mult9" value="1" checked hidden>
 			  <input type="radio" name="mult9" value="2" hidden>
 			  <input type="radio" name="mult9" value="3" hidden>
@@ -159,7 +138,7 @@
 			</div>
 		</div>
 		<div class="col">
-			<div class="btn-group-toggle" data-toggle="buttons">
+			<div class="btn-group-toggle ms-1" data-toggle="buttons">
 			  <input type="radio" name="mult10" value="1" checked hidden>
 			  <input type="radio" name="mult10" value="2" hidden>
 			  <input type="radio" name="mult10" value="3" hidden>
@@ -168,7 +147,7 @@
 			</div>
 		</div>
 		<div class="col">
-			<div class="btn-group-toggle" data-toggle="buttons">
+			<div class="btn-group-toggle ms-1" data-toggle="buttons">
 			  <input type="radio" name="mult11" value="1" checked hidden>
 			  <input type="radio" name="mult11" value="2" hidden>
 			  <input type="radio" name="mult11" value="3" hidden>
@@ -177,7 +156,7 @@
 			</div>
 		</div>
 		<div class="col">
-			<div class="btn-group-toggle" data-toggle="buttons">
+			<div class="btn-group-toggle ms-1" data-toggle="buttons">
 			  <input type="radio" name="mult12" value="1" checked hidden>
 			  <input type="radio" name="mult12" value="2" hidden>
 			  <input type="radio" name="mult12" value="3" hidden>
@@ -190,18 +169,18 @@
 		<div class="col-1">
 			<input type="radio" name="bingo" value="0" checked hidden>
 			<input type="radio" name="bingo" value="50" hidden>
-			<button type="button" id="toggleBingo" class="btn btn-secondary bingo-add">Bingo</button>
+			<button type="button" id="toggleBingo" class="btn btn-secondary bingo-add ms-1">Bingo</button>
 		</div>
 		<div class="col">
 			<div class="btn-group-toggle" data-toggle="buttons">
 			  <input type="radio" name="wordMult" value="1" checked hidden>
 			  <input type="radio" name="wordMult" value="2" hidden>
 			  <input type="radio" name="wordMult" value="3" hidden>
-			  <button type="button" id="toggleWordMult" class="btn btn-secondary word-mult">Parola 1x</button>
+			  <button type="button" id="toggleWordMult" class="btn btn-secondary word-mult ms-1">Parola 1x</button>
 			</div>
 		</div>
 	  </div>
-	  <div class="row gx-0">
+	  <div class="row gx-0 total-score">
 		<div class="col">
 			Punteggio: <strong><span id="total" class=""></span></strong>
 		</div>
@@ -210,140 +189,6 @@
 	
 	<script src="js/jquery-3.6.0.slim.min.js"></script>
 	<script src="js/bootstrap.bundle.min.js"></script>
-	<script>
-		var dict = {
-			"A": 1,
-			"B": 5,
-			"C": 2,
-			"D": 5,
-			"E": 1,
-			"F": 5,
-			"G": 8,
-			"H": 8,
-			"I": 1,
-			"L": 3,
-			"M": 3,
-			"N": 3,
-			"O": 1,
-			"P": 5,
-			"Q": 10,
-			"R": 2,
-			"S": 2,
-			"T": 2,
-			"U": 3,
-			"V": 5,
-			"Z": 8
-		};
-		
-		var validKeys = [ 
-			8, //backspace
-			35, 36, // end/home
-			37, 39, // left/right arrow
-			46, //canc
-			65, 66, 67, 68, 69, 70, 71, 72, 73, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 90
-		];
-		
-		$(function() {
-			function reset() {
-				$('#word').val('').focus();
-				$('input[name^="mult"][value=1]').each(function(index, value) {
-					$(this).prop('checked', true);
-				});
-				$('input[name="bingo"][value=0]').each(function(index, value) {
-					$(this).prop('checked', true);
-				});
-				$('input[name="wordMult"][value=1]').each(function(index, value) {
-					$(this).prop('checked', true);
-				});
-				$('#total').html(0);
-			}
-		
-			function calcTotal() {
-				var letterTotals = 0;
-				var chars = $('#word').val().split("");
-				chars.forEach(function(currentValue, index) {
-					var multiplierName = 'mult' + (index+1);
-					letterTotals += (dict[currentValue.toUpperCase()] * $('input[name="' + multiplierName + '"]:checked').val());
-				});
-				letterTotals = letterTotals * parseInt($('input[name="wordMult"]:checked').val());
-				letterTotals += parseInt($('input[name="bingo"]:checked').val());
-				$('#total').html(letterTotals);
-			}
-		
-			reset();
-		
-			$('#word')
-			.keydown(function(event){
-			  if (validKeys.indexOf(event.which) < 0) {
-			   event.preventDefault();
-			  }
-			})
-			.keyup(function(){
-			  var chars = $(this).val().split("");
-			  $('.word-letter').each(function(index, value) {
-			      if (index < chars.length) {
-					$(this).html('<span class="sub fs-3">' + chars[index].toUpperCase() + '</span><span class="sub fs-7">' + dict[chars[index].toUpperCase()] + '</span>');
-				  } else {
-					$(this).html('');
-				  }
-				  calcTotal();
-				});
-			});
-		
-			$('.letter-mult').click(function() {
-			  var $radios = $(this).parent().children('input[name^="mult"]');
-			  var colorClasses = ["btn-secondary", "btn-primary", "btn-success", "btn-light"];
-			  var $checked = $radios.filter(':checked');
-			  var $next = $radios.eq($radios.index($checked) + 1);
-			  if (!$next.length) {
-				$next = $radios.first();
-			  }
-			  $next.prop("checked", true);
-			  var newValue = $radios.filter(':checked').val();
-			  $(this)
-				.removeClass(colorClasses.join(" "))
-				.addClass(colorClasses[newValue-1])
-				.text(newValue + 'x');
-			  calcTotal();
-			});
-			
-			$('#toggleBingo').click(function() {
-			  var $radios = $(this).parent().children('input[name="bingo"]');
-			  var colorClasses = ["btn-secondary", "btn-primary"];
-			  var $checked = $radios.filter(':checked');
-			  var $next = $radios.eq($radios.index($checked) + 1);
-			  if (!$next.length) {
-				$next = $radios.first();
-			  }
-			  $next.prop("checked", true);
-			  var newValue = $radios.filter(':checked').index();
-			  $(this)
-				.removeClass(colorClasses.join(" "))
-				.addClass(colorClasses[newValue]);
-			  calcTotal();
-			});
-			
-			$('#toggleWordMult').click(function() {
-			  var $radios = $(this).parent().children('input[name="wordMult"]');
-			  var colorClasses = ["btn-secondary", "btn-primary", "btn-success", "btn-light"];
-			  var $checked = $radios.filter(':checked');
-			  var $next = $radios.eq($radios.index($checked) + 1);
-			  if (!$next.length) {
-				$next = $radios.first();
-			  }
-			  $next.prop("checked", true);
-			  var newValue = $radios.filter(':checked').val();
-			  $(this)
-				.removeClass(colorClasses.join(" "))
-				.addClass(colorClasses[newValue-1])
-				.text('Parola ' + newValue + 'x');
-			  calcTotal();
-			});
-			
-			$('#reset').click(function() {
-				location.reload();
-			});
-		});
-	</script>
+	<script src="js/scrabble.js"></script>
 </body>
 </html>
